@@ -751,6 +751,8 @@ RuleForGeneratedPasswords = Règle pour la génération des mots de passe propos
 DoNotSuggest = Ne pas proposer
 EncryptedPasswordInDatabase = Permettre l'encryption des mots de passe dans la base de données (Activation recommandée)
 DisableForgetPasswordLinkOnLogonPage = Ne pas afficher le lien "Mot de passe oublié" sur la page de connexion
+UsersSetup=Configuration du module utilisateurs
+UserMailRequired=EMail requis pour créer un nouvel utilisateur
 ##### Company setup ##### = undefined
 CompanySetup = Configuration du module Sociétés
 CompanyCodeChecker = Module de génération et contrôle des codes tiers (clients/fournisseurs)
